@@ -4,6 +4,7 @@ ikiwiki (3.07) UNRELEASED; urgency=low
   * Updated French translation (Jean-Luc Coulon). Closes: #518510
   * wmd: New plugin contributed by William Uther to support the WMD
     Wysiwym markdown editor.
+  * smiley: Avoid infinite loop in smiley expansion. Closes: #518805
 
  -- Joey Hess <joeyh@debian.org>  Thu, 05 Mar 2009 15:43:02 -0500
 
